--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.13.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vue3-kakao-maps": "^2.3.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.2",
